@@ -179,8 +179,12 @@ void bind_session_settings()
     class_<dht_settings>("dht_settings")
         .def_readwrite("max_peers_reply", &dht_settings::max_peers_reply)
         .def_readwrite("search_branching", &dht_settings::search_branching)
+#ifndef TORRENT_NO_DEPRECATE
         .def_readwrite("service_port", &dht_settings::service_port)
+#endif
         .def_readwrite("max_fail_count", &dht_settings::max_fail_count)
+        .def_readwrite("restrict_routing_ips", &dht_settings::restrict_routing_ips)
+        .def_readwrite("restrict_search_ips", &dht_settings::restrict_search_ips)
     ;
 #endif
 
